// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should also render domains with an actions description matching the query 1`] = `
<div
  className="api-documentation-results panel"
>
  <div
    className="list-group"
  >
    <ForwardRef(Link)
      className="list-group-item"
      key="bar"
      to={
        {
          "pathname": "/web_api/bar",
          "search": "?query=Bar",
        }
      }
    >
      <h3
        className="list-group-item-heading"
      >
        bar
      </h3>
    </ForwardRef(Link)>
    <ForwardRef(Link)
      className="list-group-item"
      key="baz"
      to={
        {
          "pathname": "/web_api/baz",
          "search": "?query=Bar",
        }
      }
    >
      <h3
        className="list-group-item-heading"
      >
        baz
      </h3>
    </ForwardRef(Link)>
  </div>
</div>
`;

exports[`should not render deprecated domains 1`] = `
<div
  className="api-documentation-results panel"
>
  <div
    className="list-group"
  >
    <ForwardRef(Link)
      className="list-group-item"
      key="foo"
      to={
        {
          "pathname": "/web_api/foo",
          "search": "?",
        }
      }
    >
      <h3
        className="list-group-item-heading"
      >
        foo
      </h3>
    </ForwardRef(Link)>
  </div>
</div>
`;

exports[`should not render internal domains 1`] = `
<div
  className="api-documentation-results panel"
>
  <div
    className="list-group"
  >
    <ForwardRef(Link)
      className="list-group-item"
      key="foo"
      to={
        {
          "pathname": "/web_api/foo",
          "search": "?",
        }
      }
    >
      <h3
        className="list-group-item-heading"
      >
        foo
      </h3>
    </ForwardRef(Link)>
  </div>
</div>
`;

exports[`should render deprecated domains 1`] = `
<div
  className="api-documentation-results panel"
>
  <div
    className="list-group"
  >
    <ForwardRef(Link)
      className="list-group-item"
      key="foo"
      to={
        {
          "pathname": "/web_api/foo",
          "search": "?deprecated=true",
        }
      }
    >
      <h3
        className="list-group-item-heading"
      >
        foo
      </h3>
    </ForwardRef(Link)>
    <ForwardRef(Link)
      className="list-group-item"
      key="bar"
      to={
        {
          "pathname": "/web_api/bar",
          "search": "?deprecated=true",
        }
      }
    >
      <h3
        className="list-group-item-heading"
      >
        bar
        <DeprecatedBadge
          since="5.0"
        />
      </h3>
    </ForwardRef(Link)>
  </div>
</div>
`;

exports[`should render internal domains 1`] = `
<div
  className="api-documentation-results panel"
>
  <div
    className="list-group"
  >
    <ForwardRef(Link)
      className="list-group-item"
      key="foo"
      to={
        {
          "pathname": "/web_api/foo",
          "search": "?internal=true",
        }
      }
    >
      <h3
        className="list-group-item-heading"
      >
        foo
      </h3>
    </ForwardRef(Link)>
    <ForwardRef(Link)
      className="list-group-item"
      key="bar"
      to={
        {
          "pathname": "/web_api/bar",
          "search": "?internal=true",
        }
      }
    >
      <h3
        className="list-group-item-heading"
      >
        bar
        <InternalBadge />
      </h3>
    </ForwardRef(Link)>
  </div>
</div>
`;

exports[`should render only domains with an action matching the query 1`] = `
<div
  className="api-documentation-results panel"
>
  <div
    className="list-group"
  >
    <ForwardRef(Link)
      className="list-group-item"
      key="foo"
      to={
        {
          "pathname": "/web_api/foo",
          "search": "?query=Foo",
        }
      }
    >
      <h3
        className="list-group-item-heading"
      >
        foo
      </h3>
    </ForwardRef(Link)>
  </div>
</div>
`;
